--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 :root {
   font-family: monospace;
-  color: rgba(255, 255, 255);
+  color: rgb(255, 255, 255);
   background-color: #0b1337;
 
 }
@@ -14,6 +14,3 @@ body {
   min-width: 320px;
   min-height: 100vh;
 }
-
-
-
