improve Layout responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,10 @@
   font-family: monospace;
   color: rgb(255, 255, 255);
   background-color: #0b1337;
-
+  height: screen;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
-  min-height: 100vh;
 }
