--- a/src/App.css
+++ b/src/App.css
@@ -26,19 +26,15 @@
     animation: alternate1 0.2s 1;
 }
 
-.mylist{
-    font-size: calc();
-}
 
 @keyframes alternate1 {
     0% {
-        transform: tranlate(0,0);
+        transform: translate(0,0);
     }
     50% {
        transform: translate(-5px, 5px);
     }
     100% {
         transform: translate(0,0);
-    }
-    
+    } 
 }
