--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,29 @@
     will-change: transform;
     animation: alternate1 0.2s 1;
 }
+@media(width<=400px){
+    p,h1,li{
+        font-size: xx-large;
+    }
+}
+
+h2{
+    /* font-size: 1.1rem;
+    @media (width>=65em) {
+        font-size: 1.3rem;
+    } */
+    font-size: clamp(1.1rem, 1.5vw,1.3rem);
+}
+
+p,ul{
+    font-size: 1rem;
+    @media (width>=65em) {
+        font-size: 1.1rem;
+    }
+    font-size: clamp(1rem, 1.2vw,1.1rem);
+}
+
+
 
 
 @keyframes alternate1 {
