--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,23 @@
 @import "tailwindcss";
 
 .portfolio {
-    background-image: url('./assets/images/my_portfolio.png');
+    background-image: url('./assets/images/my_portfolio.jpg');
     background-size: cover;
 }
 
 .e-learn {
-    background-image: url('./assets/images/e-learning.png');
+    background-image: url('./assets/images/e_learning.jpg');
     background-size: cover;
 }
 .mm-game {
-    background-image: url('./assets/images/memory_match.png');
+    background-image: url('./assets/images/memory_match.jpg');
     background-size: cover;
 }
 
+.pig-game {
+    background-image: url('./assets/images/pig_game.jpg');
+    background-size: cover;
+}
 ._button{
     will-change: transform;
     animation: alternate1 0.2s 1;
