--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,19 @@ p,ul{
         transform: translate(0,0);
     } 
 }
+
+.animate-onload{
+    animation: fadeIn 0.5s ease-in;
+}
+
+@keyframes fadeIn {
+    from{
+        opacity: 0;
+        transform: translate(0,7px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+
+    }
+}
