--- a/src/App.css
+++ b/src/App.css
@@ -23,22 +23,16 @@
     animation: alternate1 0.2s 1;
 }
 
-@media(width<=400px){
-    p,h1,li{
-        font-size: xx-large;
-    }
-}
-
 h2{
     font-size: clamp(1.1rem, 1.5vw,1.3rem);
 }
 
 p,ul{
-    font-size: 1rem;
-    @media (width>=65em) {
-        font-size: 1.1rem;
-    }
     font-size: clamp(1rem, 1.2vw,1.1rem);
+}
+
+code{
+    font-size: clamp(0.7rem, 1.2vw,1rem);
 }
 
 @keyframes alternate1 {
@@ -78,10 +72,14 @@ p,ul{
 }
 
 .animate-sr{
-    animation: swipeRight 0.7s ease;
+    animation: swipeRight 1s ease;
 }
 
 @keyframes swipeRight {
-    from{transform: translate(-400px,0);}
+    from{transform: translate(-100px,0);}
     to{transform: translate(0,0);}
+}
+
+span{
+    vertical-align: top;
 }
