--- a/src/App.css
+++ b/src/App.css
@@ -35,31 +35,20 @@ code{
     font-size: clamp(0.7rem, 1.2vw,1rem);
 }
 
+.wrapper{
+    scrollbar-width: none;
+    -ms-scroll-rails: none;
+    -ms-overflow-style: none; /*Edge*/
+}
+
+.wrapper::-webkit-scrollbar-x{
+    display: none; /*Chrome, Safari, and Opera*/
+}
+
 @keyframes alternate1 {
-    0% {
-        transform: translate(0,0);
-    }
-    50% {
-       transform: translate(-5px, 5px);
-    }
-    100% {
-        transform: translate(0,0);
-    } 
-}
-
-.animate-onload{
-    animation: fadeIn 0.5s ease-in;
-}
-
-@keyframes fadeIn {
-    from{
-        opacity: 0.3;
-        transform: translate(0,7px);
-    }
-    to{
-        opacity: 1;
-        transform: translate(0,0);
-    }
+    0% {transform: translate(0,0);}
+    50% {transform: translate(-5px, 5px);}
+    100% {transform: translate(0,0);} 
 }
 
 .animate-sl{
