--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,17 @@
   font-family: monospace;
   color: rgb(255, 255, 255);
   height: screen;
-  background-image: url("./assets/images/my_bg.jpg");
-  background-size: cover;
+
+  @media (min-width:700px) {
+    background-image: url("./assets/images/my_bg.jpg");
+    background-size: cover;
+  }
+
+  @media (max-width:700px) {
+    background-image: url("./assets/images/mobile-bg.jpg");
+    background-size: cover;
+  }
+  
 }
 
 body {
