--- a/src/index.css
+++ b/src/index.css
@@ -3,16 +3,15 @@
 :root {
   font-family: monospace;
   color: rgb(255, 255, 255);
-  height: screen;
+  height: 100dvh;
+  background-image: url("./assets/images/mobile-bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
 
   @media (min-width:768px) {
     background-image: url("./assets/images/my_bg.jpg");
     background-size: cover;
-  }
-
-  @media (max-width:768px) {
-    background-image: url("./assets/images/mobile-bg.jpg");
-    background-size: cover;
+    background-repeat: no-repeat;
   }
   
 }
