--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 html{
-  /* background-color: #333; */
+  background-color: #111;
   background-image: url("./assets/images/mobile-bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
